fixed overflow issue with div on homepage

--- a/index-style.css
+++ b/index-style.css
@@ -231,7 +231,7 @@ a {
     }
 
     #left-div {
-        height: max-content;
+        height: max;
         
     }
     
@@ -299,16 +299,18 @@ a {
     }
     #top-nav {
         background-color:rgb(255, 208, 0);
-        height: max;
+        height: 100%;
         width:250px;
         margin: 0 15px 0 15px;
     }
     #circle-nav{
         display: grid;
         grid-template-rows: 1fr 1fr 1fr;
-        justify-content: center;
-        grid-gap:25px;
+        justify-content: space-around;
+        grid-gap:20px;
         height: 100%;
+        align-content: center;
+        
     }
     #circle-nav button{
         height: 200px;
@@ -347,14 +349,15 @@ a {
     #left-div {
         height: 700px;
         background: rgb(226, 223, 217);
-        height:max-content;
+        height:100%;
+        
     }
     
     #right-div {
-        height: 700px;
+        height: 100%;
         width: 100%;
         background-color: salmon;
-        height:max-content;
+        overflow: auto;
     }
   
     
